hphp/test/slow/closure/no_properties_unset.php.expectf
Fatal error: Closure object cannot have properties in %s/slow/closure/no_properties_unset.php on line 7
